--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,15 @@
+:root {
+    --white: #ffffff;
+    --cian: #26f0f1;
+}
+
 * {
     margin: 0;
     padding: 0;
+}
+header {
+    background: linear-gradient(80deg, #202a25 23%, #5f4bb6 69%, #86a5d9 100%);
+    height: 50vh;
 }
 
 .header__linha1 {
@@ -8,7 +17,7 @@
 }
 
 .header__logo {
-    width: 10%;
+    width: 100px;
 }
 
 .header__itens {
