--- a/Css/style.css
+++ b/Css/style.css
@@ -1,19 +1,42 @@
-:root {
+ :root {
     --white: #ffffff;
     --cian: #26f0f1;
+    --black: #000000;
+    --gray: #808080;
 }
 
 * {
     margin: 0;
     padding: 0;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+
+body {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Impede a rolagem horizontal */
+    background-image: url(/Imgs/fundo.jpg);
+    background-attachment: fixed; 
+    background-size: cover;
+    background-position: center; 
+}
+
 header {
-    background: linear-gradient(80deg, #202a25 23%, #5f4bb6 69%, #86a5d9 100%);
-    height: 50vh;
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);    height: 50vh;
+    padding: 2em 0;
+    text-align: center;
+    color: var(--white);
+
 }
 
 .header__linha1 {
     display: flex;
+    justify-content: center;
 }
 
 .header__logo {
@@ -22,9 +45,95 @@ header {
 
 .header__itens {
     display: flex;
-    margin: 0 auto;
+    margin: 0 15%;
 }
 
 .header__item {
     margin: 0 4em;
+    color: var(--white);
 }
+
+.header__linha2 {
+    margin: 100px 0;
+}
+
+.header__title {
+    font-size: 30px;
+} 
+
+
+
+.about {
+    /* background-image: url('/Imgs/fundo.jpg');
+    background-attachment: fixed; 
+    background-size: cover;
+    background-position: center; */
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    /* padding: 50px 300px; */
+}
+
+.about__texto {
+    background: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 25px;
+    width: 50%;
+}
+
+.about__title {
+    margin: 2em 0;
+}
+
+.modelos {
+    background: rgba(255, 255, 255, 0.3); /* Cor do plano de fundo com transparência */
+    border: 1px solid rgba(255, 255, 255, 0.3); /* Cor da borda com transparência */
+    backdrop-filter: blur(1px); /* Efeito de desfoque */
+}
+
+.modelos__title {
+    text-align: center;
+    margin: 2em;
+    color: var(--white);
+}
+
+.row {
+    margin: 2em;
+}
+
+.modelos__img {
+    width: 300px;
+    border: 5px outset var(--gray); 
+}
+
+
+.contact {
+    background-color: var(--white);
+    color: black;
+    padding: 2em;
+    font-size: 20px;
+}
+
+.contact__conteudo {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.contact__texto {
+    margin: 1.5em;
+}
+
+footer {
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);    color: var(--white);
+    padding: 2em;
+    text-align: center;
+}
+
+/* .a {
+    -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0 100%);
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0 100%);
+} */
